--- a/src/autorest-core/package.json
+++ b/src/autorest-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@microsoft.azure/autorest-core",
+  "name": "@tampmd/azure.autorest-core",
   "version": "2.0.0",
   "description": "AutoRest core module",
   "engines": {
@@ -30,7 +30,7 @@
     "postinstall": "node ./post-install --force",
     "reinstall": "shx rm ./package-lock.json && shx rm -rf ./node_modules && npm install",
     "prepack": "static-link && npm run build",
-    "something":""
+    "something": ""
   },
   "typings": "./dist/main.d.ts",
   "devDependencies": {
@@ -47,11 +47,11 @@
     "tslint": "^5.9.1",
     "tslint-language-service": "^0.9.9",
     "tslint-microsoft-contrib": "^5.0.3",
-    "typescript": "^3.1.3",
+    "typescript": "3.4.2",
     "mocha-typescript": "1.1.14",
     "static-link": "^0.2.3",
     "@microsoft.azure/async-io": "^2.1.0",
-    "@microsoft.azure/extension": "^2.2.0",
+    "@tampmd/azure.extension": "^2.0.0",
     "@microsoft.azure/oai2-to-oai3": "^3.0.0",
     "@microsoft.azure/tasks": "^2.1.0",
     "vscode-jsonrpc": "^3.3.1"
@@ -60,7 +60,7 @@
     "entrypoints": [],
     "dependencies": {
       "@microsoft.azure/async-io": "^2.1.0",
-      "@microsoft.azure/extension": "^2.2.0",
+      "@tampmd/azure.extension": "^2.0.0",
       "@microsoft.azure/oai2-to-oai3": "^3.0.0",
       "@microsoft.azure/tasks": "^2.1.0",
       "vscode-languageserver": "3.5.1",
