--- a/src/autorest/package.json
+++ b/src/autorest/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "autorest",
+  "name": "@tampmd/autorest",
   "version": "2.0.0",
   "description": "The AutoRest tool generates client libraries for accessing RESTful web services. Input to AutoRest is an OpenAPI spec that describes the REST API.",
   "engines": {
     "node": ">=10.12.0"
+  },
+    "scripts": {
+    "start": "node ./dist/app.js",
+    "test": "./node_modules/.bin/mocha ./dist/test",
+    "build": "cd .. && cd autorest-core && npm run build && cd .. && cd autorest && tsc -p .&& shx mkdir -p ./dist/interfaces && shx cp -r ./interfaces/*.d.ts ./dist/interfaces ",
+    "static-link": "static-link",
+    "prepare": "node ./post-install --force",
+    "preinstall": "node ./preinstall-check",
+    "reinstall": "shx rm ./package-lock.json && shx rm -rf ./node_modules && npm install",
+    "prepack": "static-link && npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,16 +35,6 @@
   "bin": {
     "autorest": "./dist/app.js"
   },
-  "scripts": {
-    "start": "node ./dist/app.js",
-    "test": "./node_modules/.bin/mocha ./dist/test",
-    "build": "cd .. && cd autorest-core && npm run build && cd .. && cd autorest && tsc -p .&& shx mkdir -p ./dist/interfaces && shx cp -r ./interfaces/*.d.ts ./dist/interfaces ",
-    "static-link": "static-link",
-    "prepare": "node ./post-install --force",
-    "preinstall": "node ./preinstall-check",
-    "reinstall": "shx rm ./package-lock.json && shx rm -rf ./node_modules && npm install",
-    "prepack": "static-link && npm run build"
-  },
   "typings": "./dist/main.d.ts",
   "devDependencies": {
     "@types/commonmark": "^0.22.29",
@@ -43,13 +43,13 @@
     "@types/mocha": "5.2.0",
     "mocha": "5.2.0",
     "mocha-typescript": "1.1.14",
-    "typescript": "^3.1.3",
+    "typescript": "3.1.3",
     "tslint": "^5.9.1",
     "tslint-language-service": "^0.9.9",
     "tslint-microsoft-contrib": "^5.0.3",
     "static-link": "^0.2.3",
     "@microsoft.azure/async-io": "^2.1.0",
-    "@microsoft.azure/extension": "^2.2.0",
+    "@tampmd/azure.extension": "^2.0.0",
     "@microsoft.azure/tasks": "^2.1.0",
     "shx": "0.2.2"
   },
@@ -57,7 +57,7 @@
     "entrypoints": [],
     "dependencies": {
       "@microsoft.azure/async-io": "^2.1.0",
-      "@microsoft.azure/extension": "^2.2.0",
+      "@tampmd/azure.extension": "^2.0.0",
       "@microsoft.azure/tasks": "^2.1.0",
       "semver": "^5.3.0",
       "chalk": "2.3.0"
